--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "morgan": "^1.10.0",
     "why-is-node-running": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "pm2": "^4.5.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx pm2 start index.js --name provo-buddy-counter"
   },
   "author": "",
   "license": "ISC"
